# monorepo

./: .gitignore  LICENSE  contributing.md  flake.nix  readme.md
.github/workflows/: ruff-jump-rr.yml  ruff.yml
libs/: README.md  README.org
libs/alcazar/: .gitignore  flake.nix
libs/alcazar/alcazar/: pyproject.toml
libs/copairs_runner/: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  copairs_runner.py  flake.nix  pyproject.toml  run_examples.sh
libs/copairs_runner/configs/: activity_analysis.yaml  consistency_analysis.yaml  example_activity_jump_cpcnn.yaml  example_activity_jump_target2.yaml  example_activity_lincs.yaml  example_activity_lincs_dose.yaml  example_activity_lincs_hierarchical.yaml  example_consistency_jump_cpcnn.yaml  example_consistency_lincs.yaml  example_consistency_lincs_median.yaml
libs/copairs_runner/src/copairs_runner/: __init__.py  copairs_runner.py
libs/dataset_versioner/: pyproject.toml  uploader.py
libs/dataset_versioner/dataset_versioner/: __init__.py  update_etags.py  upload_index.py  zenodo_client.py
libs/dataset_versioner/tests/: test_update_etags.py
libs/jump_babel/: .envrc  README.md  flake.nix  pyproject.toml
libs/jump_babel/broad_babel/src/: query.py
libs/jump_babel/docs/: proposal_broad_babel.org
libs/jump_babel/src/broad_babel/: __init__.py  data.py  query.py
libs/jump_babel/src/tools/: gen_database.py
libs/jump_babel/test/: query_test.py
libs/jump_babel/tools/: broad_babel_example.py  fetch_data.org  gen_database.py  generate_database.org  numeric_entrez_to_gene_name.py  process_data.org
libs/jump_compound_annotator/: .gitignore  README.md  flake.nix  pyproject.toml
libs/jump_compound_annotator/notebooks/: 01_filter_annotations.py  Filtering annotations.ipynb  config.py  validate_pathways.py
libs/jump_compound_annotator/src/jump/: biokg.py  collate.py  collate_compounds.py  collate_gene.py  collect_external_ids.py  dgidb.py  drkg.py  drugrep.py  find_inchikeys.py  hetionet.py  mychem.py  ncbi.py  openbiolink.py  opentargets.py  pharmebinet.py  primekg.py  pull_unichem.py  stitch.py  unichem.py  uniprot.py  utils.py
libs/jump_compound_annotator/src/jump_compound_annotator/: biokg.py  collate.py  collate_compounds.py  collate_gene.py  collect_external_ids.py  curate.py  data_processing.py  dgidb.py  drkg.py  drugrep.py  find_inchikeys.py  hetionet.py  mychem.py  ncbi.py  openbiolink.py  opentargets.py  pharmebinet.py  prepare_zenodo.py  primekg.py  stitch.py  unichem.py  uniprot.py  utils.py
libs/jump_compound_annotator/src/tools/: prepare_zenodo.sh  zenodo_metadata.md  zenodo_metadata.txt
libs/jump_data_curator/: .gitignore  01_filter_annotations.py  filter_annotations.py  pyproject.toml
libs/jump_portrait/: .envrc  LICENSE  README.md  README.org  flake.nix  pyproject.toml
libs/jump_portrait/src/jump_portrait/: __init__.py  fetch.py  s3.py  save.py  utils.py  workflow.py
libs/jump_portrait/test/: collage_test.py  integration_test.py  integration_tests.py  item_location_test.py  main_tests.py  unit_test.py  unit_tests.py
libs/jump_portrait/tests/: integration_test.py  unit_test.py
libs/jump_rr/: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  flake.nix  pyproject.toml  readme.md
libs/jump_rr/docs/plans/: 2026-03-06-feature-ranking-table-design.md
libs/jump_rr/metadata/: compound_feature.json  compound_feature_s3.json  compound_gallery.json  compound_matches.json  compound_perturbation_ranking.json  crispr_feature.json  crispr_gallery.json  crispr_interpretable_feature.json  crispr_matches.json  orf_feature.json  orf_feature_s3.json  orf_gallery.json  orf_interpretable_feature.json  orf_matches.json  shortlinks.org
libs/jump_rr/src/: calculate.py  utils.py
libs/jump_rr/src/jump_rr/: calculate.py  calculate_features.py  calculate_matches.py  concensus.py  consensus.py  datasets.py  feature_wide_correlations.py  formatters.py  galleries.py  generate_galleries.py  index_selection.py  mappers.py  metadata.py  parse_features.py  replicability.py  significance.py  significance_feat_vs_pert.py  synonyms.py  translate.py
libs/jump_rr/src/tools/: download_profiles.org  generate_all_databases.org  generate_databases.sh  generate_perturbation_ranking.sql  upload_databases.sh  upload_parquets.sh
libs/jump_rr/src/tools/db_mapper/: fetch.awk  flake.nix  gen_jcp_to_dbs.org
libs/jump_rr/src/tools/metadata/: jcp_to_dbs.json  jump_rr.json
libs/jump_rr/tests/: conftest.py  test_data_sources.py  test_t.py
libs/jump_rr/tools/: create_metadata_files.py  download_profiles.org
libs/jump_smiles/: README.md  environment.yml  pyproject.toml  pytest.ini
libs/jump_smiles/scripts/: download_jump_compounds.py
libs/jump_smiles/src/jump_smiles/: standardize_smiles.py
libs/jump_smiles/src/smiles/: standardize_smiles.py
libs/jump_smiles/test/: test_idempotency.py  test_standardize_smiles.py
libs/jump_smiles/test/test_data/smiles_data/: JUMP-Target-2_compound_metadata_trimmed_input.tsv  JUMP-Target-2_compound_metadata_trimmed_output_jump_canonical.csv
libs/kaljax/: README.md  pyproject.toml
libs/kaljax/docs/: implementation_details.org
libs/kaljax/src/kaljax/: kalman.py
libs/smiles/: pyproject.toml
libs/smiles/src/smiles/: app.py  standardize_smiles.py
libs/smiles/test/: test_standardize_smiles.py
libs/smiles/test/test_data/smiles_data/: JUMP-Target-2_compound_metadata_trimmed_input.tsv  JUMP-Target-2_compound_metadata_trimmed_output.csv  JUMP-Target-2_compound_metadata_trimmed_output_jump_canonical.csv
libs/trommel/: .envrc  README.md  flake.nix  pyproject.toml
libs/trommel/src/trommel/: core.py
libs/trommel/test/: integration_test.py
management/code-review-asignees/: flake.nix  pyproject.toml  readme.org
management/datasets/: .envrc  clean_datasets_metadata.py  flake.nix
management/project_templates/: default.nix
management/project_templates/torch_pure/: flake.nix  requirements.txt
management/project_templates/txtai_gpu/: flake.nix
management/servers/: onboarding.org
