[tool.poetry]
name = "jump-portrait"
version = "0.0.24"
description = "Tools to fetch and visualize JUMP images"
authors = ["Alan Munoz"]
readme = "README.md"
packages = [{include = "jump_portrait", from= "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
boto3 = ">=1.33.1"
broad-babel = "^0.1.27"
joblib = "^1.3.2"
matplotlib = "^3.8.2"
polars = ">=1.5.0"
pooch = "^1.7.0"
pyarrow = ">=16.1.0"
s3path = "^0.5.0"
tqdm = "^4.66.1"
s3fs = "^2024.6.0"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupytext = "^1.15.0"
pytest = "^7.4.1"
ruff-lsp = "^0.0.48"
ruff = "^0.3.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
exclude = ["vendor"]
