[project]
name = "jump-portrait"
version = "0.0.28"
description = "Tools to fetch and visualize JUMP images"
authors = [{ name = "Alan Munoz" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "boto3>=1.33.1",
    "broad-babel>=0.1.28",
    "joblib>=1.3.2,<2",
    "matplotlib>=3.8.2,<4",
    "polars>=1.5.0",
    "pooch>=1.7.0,<2",
    "pyarrow>=16.1.0",
    "s3path>=0.5.0,<0.6",
    "tqdm>=4.66.1,<5",
    "s3fs>=2024.6.0,<2025",
    "numpy<2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "ruff-lsp>=0.0.48,<0.0.49",
    "ruff>=0.3.2,<0.4",
    "ipdb>=0.13.13,<0.14",
]
test = [
    "pytest>=7.4.4",
]

[tool.hatch.build.targets.sdist]
include = ["src/jump_portrait"]

[tool.hatch.build.targets.wheel]
include = ["src/jump_portrait"]

[tool.hatch.build.targets.wheel.sources]
"src/jump_portrait" = "jump_portrait"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
lint.ignore = ["D212"]
exclude = ["vendor"]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]
# Ignore all files that end in `_test.py`.
"*_test.py" = ["D"]

[tool.uv]
default-groups = ["dev"]
