[tool.poetry]
name = "jump_rr"
version = "0.1.0"
description = "Tools to compare profiles in a round-robin manner (all-vs-all)"
authors = ["Alan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
broad-babel = "^0.1.27"
numpy = "*"
pyarrow = ">=16.1.0"
polars = "*"
pylibraft-cu12 = {version = "==24.6.*", source = "nvidia"}
statsmodels = "0.14.1"
cachier = "^3.0.0"
s3fs = "^2024.3.1"
duckdb = "^1.1.3"
dask = "^2025.1.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipdb = "^0.13.13"
ruff = "^0.9.6"
ruff-lsp = "^0.0.50"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
