[project]
name = "jump_rr"
version = "0.1.0"
description = "Tools for high throughput statistics of morphological profiles."
authors = [{ name = "Alan" }]
requires-python = ">3.10,<3.12"
readme = "README.md"
dependencies = [
    "broad-babel>=0.1.27,<0.2",
    "numpy",
    "pyarrow>=16.1.0",
    "polars",
    "pylibraft-cu12==24.6.*",
    "statsmodels==0.14.1",
    "cachier>=3.0.0,<4",
    "duckdb>=1.1.3,<2",
    "dask>=2025.1.0,<2026",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "ipdb>=0.13.13,<0.14",
    "ruff>=0.9.6,<0.10",
    "ruff-lsp>=0.0.50,<0.0.51",
    "pytest>=8.3.5,<9",
]
test = [
    "requests>=2.32.3",
]

[tool.uv]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
default = true

[tool.uv.sources]
pylibraft-cu12 = { index = "nvidia" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jump_rr"]

[tool.ruff]
lint.select = ["ANN", "C90", "D", "E", "F", "I", "N", "NPY", "PTH", "TID", "UP", "W"]
lint.ignore = ["D212"]
exclude = ["vendor"]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]
# Ignore all files that end in `_test.py`.
"*_test.py" = ["D"]

