[tool.poetry]
name = "jump-smiles"
version = "0.0.1"
description = ""
readme = "README.md"
authors = ["Alán F. Muñoz <amunozgo@broadinstitute.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4"
rdkit = "2023.9.5"
fire = ">=0.4.0"
requests = "2.28.2"
pandas = "2.2.2"
numpy = "1.26.4"
tqdm = "4.64.1"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
ipykernel = ">=6.21.2"
pytest = "8.1.1"
jupytext = "^1.15.2"
ipdb = "^0.13.13"
ruff-lsp = "^0.0.50"
ruff = "<0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
