[project]
authors = [
    {name = "Alán F. Muñoz", email = "amunozgo@broadinstitute.org"},
]
license = {text = "MIT"}
requires-python = "<4,>=3.11"

dependencies = [
    "rdkit==2023.9.5",
    "fire>=0.4.0",
    "requests==2.28.2",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "tqdm==4.64.1",
    "jinja2>=3.1.6",
]
name = "jump-smiles"
version = "0.0.1"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.21.2",
    "pytest==8.1.1",
    "jupytext<2.0.0,>=1.15.2",
    "ipdb<1.0.0,>=0.13.13",
    "ruff-lsp<1.0.0,>=0.0.50",
    "ruff<0.2.0",
]

[tool.uv]
default-groups = []

