[project]
name = "jump-smiles"
version = "0.0.2"
description = "Python library for standardizing chemical structures using RDKit"
readme = "README.md"
authors = [
    {name = "Alán F. Muñoz", email = "amunozgo@broadinstitute.org"},
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"  # RDKit 2023.9.5 only has wheels for 3.11-3.12
dependencies = [
    "rdkit==2023.9.5",
    "fire>=0.4.0",
    "requests>=2.28.0,<3",
    "pandas>=2.2.0,<3",
    "numpy>=1.26.0,<2",
    "tqdm>=4.64.1",
]

[project.scripts]
jump-smiles = "jump_smiles.standardize_smiles:main"

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.21.2",
    "pytest>=8.1.1",
    "jupytext>=1.15.2,<2",
    "ipdb>=0.13.13",
    "ruff-lsp>=0.0.50",
    "ruff<0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
