[tool.poetry]
name = "kaljax"
version = "0.0.0"
description = "Kalman filter implemented in JAX for GPU and CPU usage"
authors = ["Alan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pyarrow = "^14.0.1"
adbc-driver-sqlite = "^0.8.0"
jax = "^0.4.25"
# Replace cuda11-pip and the version with the latest version once this issue is fixed
# The NVIDIA driver's CUDA version is 11.4 which is older than the ptxas CUDA version (11.8.89). Because the driver is older than the ptxas version, XLA is disabling parallel compilation, which may slow down compilation. You should update your NVIDIA driver or use the NVIDIA-provided CUDA forward compatibility packages.
# jaxlib = {extras = ["cuda11-local"], version = "0.4.25+cuda11.cudnn86", source = "jax"}
jaxlib = {version = "0.4.25+cuda11.cudnn86", extras = ["cuda11-pip"], source = "jax"}
# jaxlib = {extras = ["cuda112-local"], version = "1.65+cuda112", source = "jax"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupytext = "^1.15.2"
ipdb = "^0.13.13"
ruff-lsp = "^0.0.50"
ruff = "<0.2.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
