[project]
name = "kaljax"
version = "0.0.0"
description = "Kalman filter implemented in JAX for GPU and CPU usage"
authors = [{ name = "Alan Munoz" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "pyarrow>=14.0.1,<15",
    "adbc-driver-sqlite>=0.8.0,<0.9",
    "jax>=0.4.25,<0.5",
    "jaxlib[cuda112-local]==1.65+cuda112",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0,<2",
    "jupytext>=1.15.2,<2",
    "ipdb>=0.13.13,<0.14",
    "ruff-lsp>=0.0.50,<0.0.51",
    "ruff<0.2.0",
]

[tool.uv]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
default = true

[[tool.uv.index]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
explicit = true

[tool.uv.sources]
jaxlib = { index = "jax" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
