[project]
name = "trommel"
version = "0.1.0"
description = "Data cleaning functions and pipelines for morphological profiles."
authors = [
  {name = "Alan Munoz"},
]
readme = "README.md"
requires-python = ">3.10,<3.12"
dependencies = [
    "numpy>=2.0.2",
    "polars>=1.16.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
]
