[project]
name = "trommel"
version = "0.1.6"
description = "Data cleaning functions and pipelines for morphological profiles."
authors = [
  {name = "Alan Munoz"},
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "duckdb>=1.1.3",
    "numpy>=1.18.2",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]

[tool.hatch.build.targets.sdist]
include = ["src/trommel"]

[tool.hatch.build.targets.wheel]
include = ["src/trommel"]

[tool.hatch.build.targets.wheel.sources]
"src/trommel" = "trommel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
