[tool.poetry]
name = "alcazar"
version = "0.1.0"
description = ""
authors = ["Ankur Kumar <ank@leoank.me>"]
readme = "README.md"
packages = [{include = "alcazar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
